[INJICERT-1197] Align DIDDocumentUtil tests with top-level context
Signed-off-by: Anjalig922 <anjalig9222@gmail.com>